--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
     </div>
     <section class="pb-0">
       <div class="container">
-        <div class="wrapper__brand d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-center">
-          <img src="./assets/images/AnfaniFI-logo.png" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1000"
-            class="mb-1" alt="" />
+        <div class="wrapper__brand d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-center justify-content-lg-between">
+          <img src="./assets/images/anfaniFI_logo.png" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1000"
+            alt="" />
           <img src="./assets/images/Linksys-logo.png" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="800"
            alt="" />
           <img src="./assets/images/Ingram-logo.png" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="600"
-          class="mb-1" alt="" />
+        alt="" />
           <img src="./assets/images/SaveEat-Logo.png" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="400"
-          class="mb-1" alt="" />
+          alt="" />
         </div>
       </div>
     </section>
