--- a/index.html
+++ b/index.html
@@ -145,71 +145,77 @@
           <div class="col-sm-6 col-lg-3 mb-4 mb-sm-0">
             <div class="wrapper__card-service" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="800">
               <div class="icon mb__6 mb__mm-0">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                
+                
+                <svg width="28" height="27" viewBox="0 0 28 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M20.8847 3.8457H6.11542C4.58602 3.8457 3.34619 5.08553 3.34619 6.61493V21.3842C3.34619 22.9136 4.58602 24.1534 6.11542 24.1534H20.8847C22.4141 24.1534 23.6539 22.9136 23.6539 21.3842V6.61493C23.6539 5.08553 22.4141 3.8457 20.8847 3.8457Z" stroke="white" stroke-width="2" stroke-linejoin="round" />
+                  <path d="M19.0386 7.53809H7.96165C7.45185 7.53809 7.03857 7.95136 7.03857 8.46116V19.5381C7.03857 20.0479 7.45185 20.4612 7.96165 20.4612H19.0386C19.5484 20.4612 19.9617 20.0479 19.9617 19.5381V8.46116C19.9617 7.95136 19.5484 7.53809 19.0386 7.53809Z" stroke="white"stroke-width="2" stroke-linejoin="round"/>
+                  <path d="M13.5 3.84615V2M18.1154 3.84615V2M8.88462 3.84615V2M13.5 26V24.1538M18.1154 26V24.1538M8.88462 26V24.1538M23.6538 14H25.5M23.6538 18.6154H25.5M23.6538 9.38462H25.5M1.5 14H3.34615M1.5 18.6154H3.34615M1.5 9.38462H3.34615" stroke="white"stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>                
+                  </svg>
+
+                <!--<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M20 3H7C5.897 3 5 3.897 5 5V7H4C2.897 7 2 7.897 2 9V19C2 20.103 2.897 21 4 21H10C11.103 21 12 20.103 12 19H20C21.103 19 22 18.103 22 17V5C22 3.897 21.103 3 20 3ZM6 9H10L9.997 18H4V9H6ZM12 17V9C12 7.897 11.103 7 10 7H7V5H18V17H12Z"
                     fill="white" />
-                </svg>
+                </svg>-->
               </div>
 
-              <h4 class="bold font__size--24 text__24-1024">UI Design</h4>
+              <h4 class="bold font__size--24 text__24-1024">Hardware Product Management</h4>
               <p class="medium font__size--12 text__12-md color__gray-1">
-                Varius amet, integer tellus non eget viverra. Ultrices tellus
-                donec gravida id sed senectus dolor cursus sed.
+                Full life cycle management of Networking devices, Mobile, Phone and tablets.
               </p>
+              <p class="coming-soon">Coming Soon</p>
             </div>
           </div>
           <div class="col-sm-6 col-lg-3 mb-4 mb-sm-0">
             <div class="wrapper__card-service mt-sm-5" data-aos="flip-left" data-aos-duration="1000"
               data-aos-delay="600">
               <div class="icon mb__6 mb__mm-0">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M20 3H4C2.897 3 2 3.897 2 5V19C2 20.103 2.897 21 4 21H20C21.103 21 22 20.103 22 19V5C22 3.897 21.103 3 20 3ZM20.001 9C20 9 20 9 20.001 9H19.536L16.869 5H20L20.001 9ZM15.5 15L10 18V12L15.5 15ZM14.536 9L11.869 5H14.465L17.132 9H14.536ZM12.132 9H9.536L6.869 5H9.465L12.132 9ZM4 5H4.465L7.132 9H4V5Z"
-                    fill="white" />
-                </svg>
+                <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M4.32269 22.9258H7.88891V19.3644H4.32269V22.9258ZM1.34196 16.3837V19.3644H4.32269V16.3837H1.34196ZM23.9006 8.17215C22.7877 4.58173 19.9134 1.72197 16.323 0.59452C8.09214 -1.97491 0.5 4.14623 0.5 11.9948H5.13561C5.13561 7.06889 10.0228 3.26072 15.2052 5.13819C17.1263 5.83015 18.665 7.3689 19.357 9.28508C21.249 14.4626 17.4359 19.3402 12.5148 19.3499V19.3644H12.5003V24C20.3683 24 26.4749 16.4127 23.9006 8.17215ZM12.5148 19.3499V14.7385H7.88891V19.3644H12.5003V19.3499H12.5148Z" fill="white"/>
+                  </svg>
               </div>
 
-              <h4 class="bold font__size--24 text__24-1024">Motion Design</h4>
+              <h4 class="bold font__size--24 text__24-1024">Digital Product Management</h4>
               <p class="medium font__size--12 text__12-md color__gray-1">
-                Varius amet, integer tellus non eget viverra. Ultrices tellus
-                donec gravida id sed senectus dolor cursus sed.
+                Ideation, Strategy Development, and Delivery at Early-Stage Startups. Leveraging Agile Principles
               </p>
+              <p class="coming-soon">Coming Soon</p>
             </div>
           </div>
           <div class="col-sm-6 col-lg-3 mb-4 mb-sm-0">
             <div class="wrapper__card-service" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="400">
               <div class="icon mb__6 mb__mm-0">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M20.9782 13.21C21.0193 13.0193 21.0037 12.8207 20.9333 12.6388C20.863 12.4568 20.7409 12.2994 20.5822 12.186L6.58222 2.18597C6.42468 2.07268 6.23756 2.00773 6.04372 1.99905C5.84987 1.99036 5.65769 2.03832 5.49065 2.13706C5.32361 2.2358 5.18894 2.38105 5.10309 2.55506C5.01724 2.72908 4.98393 2.92433 5.00722 3.11697L7.00722 20.117C7.03025 20.3119 7.1101 20.4957 7.23685 20.6455C7.3636 20.7953 7.53163 20.9046 7.72001 20.9596C7.90839 21.0146 8.10879 21.013 8.29625 20.9549C8.48371 20.8968 8.64994 20.7848 8.77422 20.633L12.3862 16.217L15.7632 21.677L17.4642 20.625L14.1072 15.197L20.1962 13.979C20.3876 13.9415 20.5637 13.8487 20.7027 13.7119C20.8418 13.5752 20.9376 13.4007 20.9782 13.21Z"
-                    fill="white" />
-                </svg>
+                <svg width="33" height="24" viewBox="0 0 33 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M29.3681 3.42899C29.6741 3.42899 29.9222 3.17315 29.9222 2.85756C29.9222 2.54197 29.6741 2.28613 29.3681 2.28613C29.062 2.28613 28.814 2.54197 28.814 2.85756C28.814 3.17315 29.062 3.42899 29.3681 3.42899Z" fill="white"/>
+                  <path d="M27.1515 3.42899C27.4576 3.42899 27.7056 3.17315 27.7056 2.85756C27.7056 2.54197 27.4576 2.28613 27.1515 2.28613C26.8455 2.28613 26.5974 2.54197 26.5974 2.85756C26.5974 3.17315 26.8455 3.42899 27.1515 3.42899Z" fill="white"/>
+                  <path d="M24.935 3.42899C25.241 3.42899 25.4891 3.17315 25.4891 2.85756C25.4891 2.54197 25.241 2.28613 24.935 2.28613C24.6289 2.28613 24.3809 2.54197 24.3809 2.85756C24.3809 3.17315 24.6289 3.42899 24.935 3.42899Z" fill="white"/>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M1.66234 24H30.4762C31.3944 24 32.1385 23.2326 32.1385 22.2857V1.71429C32.1385 0.767429 31.3944 0 30.4762 0H1.66234C0.744173 0 0 0.767429 0 1.71429V22.2857C0 23.2326 0.744173 24 1.66234 24ZM31.0303 5.71429V22.2857C31.0303 22.6011 30.7821 22.8571 30.4762 22.8571H1.66234C1.35647 22.8571 1.10823 22.6011 1.10823 22.2857V5.71429H31.0303ZM31.0303 4.57143H1.10823V1.71429C1.10823 1.39886 1.35647 1.14286 1.66234 1.14286H30.4762C30.7821 1.14286 31.0303 1.39886 31.0303 1.71429V4.57143Z" fill="white"/>
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M11.0728 13.176L9.74187 13.8091C9.5446 13.9029 9.41882 14.1069 9.41993 14.3309C9.42104 14.5549 9.54904 14.7577 9.74741 14.8491L11.0728 15.4617L9.74187 16.0949C9.5446 16.1886 9.41882 16.3926 9.41993 16.6166C9.42104 16.8406 9.54904 17.0434 9.74741 17.1349L15.8426 19.9503C15.9867 20.0166 16.1518 20.0166 16.2959 19.9503L22.3912 17.1349C22.5895 17.0434 22.7175 16.8406 22.7186 16.6166C22.7197 16.3926 22.594 16.1886 22.3967 16.0949L21.0657 15.4617L22.3912 14.8491C22.5895 14.7577 22.7175 14.5549 22.7186 14.3309C22.7197 14.1069 22.594 13.9029 22.3967 13.8091L21.0657 13.176L22.3912 12.5634C22.5895 12.472 22.7175 12.2691 22.7186 12.0451C22.7197 11.8211 22.594 11.6171 22.3967 11.5234L16.3015 8.624C16.1541 8.55372 15.9845 8.55372 15.8371 8.624L9.74187 11.5234C9.5446 11.6171 9.41882 11.8211 9.41993 12.0451C9.42104 12.2691 9.54904 12.472 9.74741 12.5634L11.0728 13.176ZM12.4155 16.0817L11.3133 16.6057L16.0693 18.8023L20.8252 16.6057L19.7231 16.0817L16.2959 17.6646C16.1518 17.7309 15.9867 17.7309 15.8426 17.6646L12.4155 16.0817ZM12.4155 13.796L11.3133 14.32L16.0693 16.5166L20.8252 14.32L19.7231 13.796L16.2959 15.3789C16.1518 15.4451 15.9867 15.4451 15.8426 15.3789L12.4155 13.796ZM20.8252 12.0343L16.0693 14.2309L11.3133 12.0343L16.0693 9.772L20.8252 12.0343Z" fill="white"/>
+                  </svg>
               </div>
 
-              <h4 class="bold font__size--24 text__24-1024">Prototype</h4>
+              <h4 class="bold font__size--24 text__24-1024">Full-Stack Developer</h4>
               <p class="medium font__size--12 text__12-md color__gray-1">
-                Varius amet, integer tellus non eget viverra. Ultrices tellus
-                donec gravida id sed senectus dolor cursus sed.
+                Hands on Experience with HTML, CSS, JavaScript, Bootstrap..
               </p>
+              <p class="coming-soon">Coming Soon</p>
             </div>
           </div>
           <div class="col-sm-6 col-lg-3 mb-4 mb-sm-0">
             <div class="wrapper__card-service mt-sm-5" data-aos="flip-left" data-aos-duration="1000"
               data-aos-delay="200">
               <div class="icon mb__6 mb__mm-0">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M19.023 16.977C18.5546 16.5284 18.0988 16.0669 17.656 15.593C17.284 15.215 17.06 14.94 17.06 14.94L14.26 13.603C15.381 12.3316 15.9997 10.695 16 9C16 5.141 12.86 2 9 2C5.14 2 2 5.141 2 9C2 12.859 5.14 16 9 16C10.763 16 12.37 15.34 13.603 14.261L14.94 17.061C14.94 17.061 15.215 17.285 15.593 17.657C15.98 18.02 16.489 18.511 16.977 19.024L18.335 20.416L18.939 21.062L21.06 18.941L20.414 18.337C20.035 17.965 19.529 17.471 19.023 16.977ZM9 14C6.243 14 4 11.757 4 9C4 6.243 6.243 4 9 4C11.757 4 14 6.243 14 9C14 11.757 11.757 14 9 14Z"
-                    fill="white" />
-                </svg>
+                <svg width="27" height="24" viewBox="0 0 27 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M26.7446 1.6C26.7446 1.47692 26.681 1.35385 26.6173 1.23077C26.6173 1.16923 26.5536 1.16923 26.5536 1.10769C26.4899 0.984615 26.3626 0.861539 26.2352 0.738462C25.2164 -0.246154 23.6244 -0.246154 22.6056 0.738462L21.0136 2.21538H2.67446C2.10136 2.21538 1.59194 2.4 1.1462 2.64615C0.445744 3.13846 0 3.93846 0 4.86154V21.3538C0 22.2769 0.445744 23.0769 1.20988 23.5077C1.59194 23.8154 2.16504 24 2.67446 24H21.332C22.7966 24 24.0065 22.8308 24.0065 21.3538V6.27692L26.1079 4.24615C26.9357 3.50769 27.1267 2.46154 26.7446 1.6ZM7.95971 3.50769C8.46913 3.50769 8.8512 3.87692 8.8512 4.36923C8.8512 4.86154 8.46913 5.23077 7.95971 5.23077C7.45029 5.23077 7.06822 4.86154 7.06822 4.36923C7.06822 3.87692 7.45029 3.50769 7.95971 3.50769ZM5.15789 3.50769C5.66731 3.50769 6.04938 3.87692 6.04938 4.36923C6.04938 4.86154 5.66731 5.23077 5.15789 5.23077C4.64847 5.23077 4.26641 4.86154 4.26641 4.36923C4.26641 3.87692 4.64847 3.50769 5.15789 3.50769ZM2.35607 3.50769C2.8655 3.50769 3.24756 3.87692 3.24756 4.36923C3.24756 4.86154 2.80182 5.23077 2.35607 5.23077C1.91033 5.23077 1.46459 4.86154 1.46459 4.36923C1.46459 3.87692 1.84665 3.50769 2.35607 3.50769ZM22.6056 7.93846V21.3538C22.6056 22.0308 22.0325 22.5846 21.332 22.5846H4.13905H2.67446C2.48343 22.5846 2.35607 22.5846 2.16504 22.4615C2.10136 22.4615 2.03769 22.4 1.97401 22.3385C1.91033 22.3385 1.91033 22.2769 1.84665 22.2154C1.59194 22.0308 1.46459 21.7231 1.46459 21.3538V7.93846C1.46459 7.13846 2.16504 6.46154 2.99285 6.46154H16.3015C16.3015 6.52308 16.3652 6.64615 16.4288 6.70769L16.0468 7.07692C15.8557 6.89231 15.601 6.89231 15.4737 7.07692C15.3463 7.26154 15.2826 7.50769 15.4737 7.63077L14.3912 8.67692L14.0091 8.36923C13.8817 8.24615 13.7544 8.18462 13.627 8.12308C13.5633 8.06154 13.436 8 13.3723 8C13.3086 8 13.1813 8 13.1176 8C13.0539 8 12.9266 8 12.8629 8C12.6082 8.06154 12.4172 8.18462 12.2261 8.30769C11.7167 8.8 11.7167 9.53846 12.2261 10.0308V10.0923C11.9077 10.0308 11.5893 9.96923 11.3346 9.96923C10.5068 9.96923 9.67901 10.2769 9.04223 10.8923C8.53281 11.3846 8.21442 12.0615 8.15074 12.7385C8.08707 13.6 7.83236 14.4 7.45029 15.1385C7.19558 15.6923 6.81351 16.2462 6.43145 16.7385C6.30409 16.9231 6.11306 17.0462 5.9857 17.2308L5.66731 17.5385C5.73099 17.6 5.79467 17.6615 5.85835 17.6615C7.51397 19.0769 10.0611 19.0769 11.7167 17.6615C12.9266 18.4 14.5822 18.2769 15.6647 17.2308C16.5562 16.4308 16.8109 15.2 16.4925 14.1538H16.5562C17.0656 14.6462 17.8298 14.6462 18.3392 14.1538C18.8486 13.6615 18.8486 12.9231 18.3392 12.4308L18.0208 12.1231L19.1033 11.0769C19.167 11.1385 19.2943 11.2 19.358 11.2C19.4854 11.2 19.5491 11.1385 19.6764 11.0769C19.8674 10.8923 19.8674 10.7077 19.6764 10.5231L20.0585 10.1538C20.1222 10.2154 20.2495 10.2769 20.3132 10.2769C20.4405 10.2769 20.5042 10.2154 20.6316 10.1538C20.8226 9.96923 20.8226 9.78462 20.6316 9.6L22.6056 7.69231C22.6056 7.75385 22.6056 7.81538 22.6056 7.93846Z" fill="white"/>
+                  </svg>
               </div>
 
-              <h4 class="bold font__size--24 text__24-1024">UX Research</h4>
+              <h4 class="bold font__size--24 text__24-1024">UX  & Packaging Design</h4>
               <p class="medium font__size--12 text__12-md color__gray-1">
-                Varius amet, integer tellus non eget viverra. Ultrices tellus
-                donec gravida id sed senectus dolor cursus sed.
+                UX Design, Packaging Development, and User Validation with Figma
               </p>
+              <p class="coming-soon">Coming Soon</p>
             </div>
           </div>
         </div>
