about me started

--- a/index.html
+++ b/index.html
@@ -331,6 +331,77 @@
     </section>
 <!--Featured ends-->
 
+<!--About Section-->
+<section class="bg__black top-conunt">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 mb-5 my-lg-auto">
+        <div class="row">
+          <div class="col-6 mb-5">
+            <h4
+              class="font__size--60 text__60-1024 text__60-sm text__60-xxs bold color__softblue"
+            >
+              <span class="count">100</span>+
+            </h4>
+            <p
+              class="mb-0 medium font__size--24 text__24-1024 text__24-xx color__white"
+            >
+              Project Completed
+            </p>
+          </div>
+          <div class="col-6 mb-5">
+            <h4
+              class="font__size--60 text__60-1024 text__60-sm text__60-xxs bold color__softblue"
+            >
+              <span class="count">4</span>+
+            </h4>
+            <p
+              class="mb-0 medium font__size--24 text__24-1024 text__24-xx color__white"
+            >
+              Years Experience
+            </p>
+          </div>
+          <div class="col-6">
+            <h4
+              class="font__size--60 text__60-1024 text__60-sm text__60-xxs bold color__softblue"
+            >
+              <span class="count">200</span>+
+            </h4>
+            <p
+              class="mb-0 medium font__size--24 text__24-1024 text__24-xx color__white"
+            >
+              Satisfied Client
+            </p>
+          </div>
+          <div class="col-6">
+            <h4
+              class="font__size--60 text__60-1024 text__60-sm text__60-xxs bold color__softblue"
+            >
+              <span class="count">300</span>+
+            </h4>
+            <p
+              class="mb-0 medium font__size--24 text__24-1024 text__24-xx color__white"
+            >
+              Good Testimonials
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 my-auto">
+        <img
+          src="./assets/images/traditional_v2.png"
+          data-aos="fade-left"
+          data-aos-duration="1000"
+          data-aos-delay="200"
+          alt=""
+        />
+      </div>
+    </div>
+  </div>
+</section>
+<!--About Ends-->
+
+<!--Work Experience-->
     <section>
       <div class="container">
         <div class="row">
