--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
       </div>
     </section>
 
+            <!--Featured-->
     <section>
       <div class="container">
         <div class="text-center">
@@ -248,7 +249,7 @@
           </h2>
         </div>
 
-        <!--Featured-->
+
         <div class="row align-items-stretch">
           <div class="col-xl-6">
             <div class="wrapper__project vibrant_blue mb-5" data-aos="fade-right" data-aos-duration="1000"
@@ -261,7 +262,7 @@
                   <p class="tile-sub mt-1">
                     Merchant Dashboard, Menu creation & Ordering system
                   </p>
-                  <div class="category d-flex align-items-center flex-wrap mb-4 mb-md-5">
+                  <div class="category d-flex align-items-center flex-wrap mb-2 mb-md-2">
                     <div class="item medium font__size--14 text__14-1024 color__white">
                       Research
                     </div>
@@ -334,29 +335,39 @@
 <!--About Section-->
 <section class="bg__black top-conunt">
   <div class="container">
+    
+  <div class="container ">
+    
     <div class="row">
       <div class="col-lg-6 mb-5 my-lg-auto">
+        <div class="text-left">
+          <h2 class="bold font__size--40 text__40-1024 text__40-mm mb-5 color__white " data-aos="fade-up" data-aos-duration="1000"
+            data-aos-delay="200">
+            <span class="position-relative path__3"><span class="position-relative z-2 ">About</span></span>
+            Me
+          </h2>
+        </div>
         <div class="row">
           <div class="col-6 mb-5">
             <h4
               class="font__size--60 text__60-1024 text__60-sm text__60-xxs bold color__softblue"
             >
-              <span class="count">100</span>+
+              $<span class="count">50</span>m+
             </h4>
             <p
-              class="mb-0 medium font__size--24 text__24-1024 text__24-xx color__white"
+              class="mb-0 medium font__size--20 text__24-1024 text__24-xx color__white"
             >
-              Project Completed
+              Largest project
             </p>
           </div>
           <div class="col-6 mb-5">
             <h4
               class="font__size--60 text__60-1024 text__60-sm text__60-xxs bold color__softblue"
             >
-              <span class="count">4</span>+
+              <span class="count">15</span>+
             </h4>
             <p
-              class="mb-0 medium font__size--24 text__24-1024 text__24-xx color__white"
+              class="mb-0 medium font__size--20 text__24-1024 text__24-xx color__white"
             >
               Years Experience
             </p>
@@ -365,24 +376,24 @@
             <h4
               class="font__size--60 text__60-1024 text__60-sm text__60-xxs bold color__softblue"
             >
-              <span class="count">200</span>+
+              <span class="count">6</span>+
             </h4>
             <p
-              class="mb-0 medium font__size--24 text__24-1024 text__24-xx color__white"
+              class="mb-0 medium font__size--20 text__24-1024 text__24-xx color__white"
             >
-              Satisfied Client
+              Product managment experience
             </p>
           </div>
           <div class="col-6">
             <h4
               class="font__size--60 text__60-1024 text__60-sm text__60-xxs bold color__softblue"
             >
-              <span class="count">300</span>+
+              <span class="count">2</span>
             </h4>
             <p
-              class="mb-0 medium font__size--24 text__24-1024 text__24-xx color__white"
+              class="mb-0 medium font__size--20 text__24-1024 text__24-xx color__white"
             >
-              Good Testimonials
+              Early stage SaaS startups
             </p>
           </div>
         </div>
