--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </div>
           </div>
           <div class="col-xl-6">
-            <div class="wrapper__project deep_red mb-5" data-aos="fade-right" data-aos-duration="1000"
+            <div class="wrapper__project deep_red mb-5" data-aos="fade-left" data-aos-duration="1000"
               data-aos-delay="200">
               <div class="row">
                 <div class="col-12 col-md-6 col-xl-7 mb-5 my-md-auto px-0">
@@ -400,7 +400,9 @@
               Early stage SaaS startups
             </p>
           </div>
+          
         </div>
+        
       </div>
       <div class="col-lg-6 my-auto">
         <img
