adds job highlights

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
       <div class="container">
         <div
           class="wrapper__brand d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-center justify-content-lg-between">
-          <img src="./assets/images/anfaniFI_logo.png" data-aos="fade-right" data-aos-duration="1000"
+          <img src="./assets/images/AnfaniFI-logo.svg" data-aos="fade-right" data-aos-duration="1000"
             data-aos-delay="1000" alt="" />
-          <img src="./assets/images/Linksys-logo.png" data-aos="fade-right" data-aos-duration="1000"
+          <img src="./assets/images/Linksys-logo.svg" data-aos="fade-right" data-aos-duration="1000"
             data-aos-delay="800" alt="" />
-          <img src="./assets/images/Ingram-logo.png" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="600"
+          <img src="./assets/images/Ingram-logo.svg" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="600"
             alt="" />
-          <img src="./assets/images/SaveEat-Logo.png" data-aos="fade-right" data-aos-duration="1000"
+          <img src="./assets/images/SaveEat-Logo.svg" data-aos="fade-right" data-aos-duration="1000"
             data-aos-delay="400" alt="" />
         </div>
       </div>
@@ -431,9 +431,7 @@
                   Working experience
                 </h4>
                 <p class="medium font__size--12 text__12-md color__white opacity__5">
-                  Tincidunt purus lacus nascetur nunc commodo. Netus at
-                  dignissim urna quam. Imperdiet proin sapien posuere egestas.
-                  Tristique nam magna velit odio ullamcorper eget donec.
+                  As a data-led Product Manager with full-stack development skills, I've driven growth across B2B, Consumer, and startup ventures, leading product development, user experience, and go-to-market strategies for hardware, software, and SaaS solutions
                 </p>
                 <img src="./assets/images/Group 17.png" class="d-none d-sm-block" alt="" />
               </div>
@@ -442,13 +440,13 @@
           <div class="col-lg-6 d-flex flex-wrap align-content-between">
             <div class="w-100" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
               <div class="wrapper__list-experience mb-4 mb-lg-0 d-flex align-items-center">
-                <img src="./assets/images/Frame (5a).png" class="flex-shrink-0" alt="" />
+                <img src="./assets/images/anfanifi_a.svg" class="flex-shrink-0" alt="" />
                 <div class="desc ml-3">
                   <h5 class="bold font__size--24 text__24-1024 mb-1">
-                    Slack
+                    AnfaniFI
                   </h5>
                   <p class="mb-0 semi-bold font__size--12 text__12-md color__gray-1">
-                    Product Design - 4 Years Experince
+                    Product Management, UX design and Strategy - 7 months Experience
                   </p>
                 </div>
               </div>
@@ -456,13 +454,13 @@
 
             <div class="w-100" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
               <div class="wrapper__list-experience mb-4 mb-lg-0 d-flex align-items-center">
-                <img src="./assets/images/Frame (6a).png" class="flex-shrink-0" alt="" />
+                <img src="./assets/images/linksys_l.svg" class="flex-shrink-0" alt="" />
                 <div class="desc ml-3">
                   <h5 class="bold font__size--24 text__24-1024 mb-1">
-                    Firefox
+                    Linksys
                   </h5>
                   <p class="mb-0 semi-bold font__size--12 text__12-md color__gray-1">
-                    Sr. UI Design - 4 Years Experince
+                    Product Management, Strategy and Sales Operations- 3 Years Experience
                   </p>
                 </div>
               </div>
@@ -470,35 +468,36 @@
 
             <div class="w-100" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
               <div class="wrapper__list-experience mb-4 mb-lg-0 d-flex align-items-center">
-                <img src="./assets/images/Frame (7a).png" class="flex-shrink-0" alt="" />
+                <img src="./assets/images/ingram_block.svg" class="flex-shrink-0" alt="" />
                 <div class="desc ml-3">
                   <h5 class="bold font__size--24 text__24-1024 mb-1">
-                    Digital Ocean
+                    Ingram Micro
                   </h5>
                   <p class="mb-0 semi-bold font__size--12 text__12-md color__gray-1">
-                    UI & Motion Designer - 4 Years Experince
+                    Product Management, and Business Development - 3 Years Experience
                   </p>
                 </div>
               </div>
             </div>
             <div class="w-100" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
               <div class="wrapper__list-experience d-flex align-items-center">
-                <img src="./assets/images/Frame (8).png" class="flex-shrink-0" alt="" />
+                <img src="./assets/images/saveeat_S.svg" class="flex-shrink-0" alt="" />
                 <div class="desc ml-3">
                   <h5 class="bold font__size--24 text__24-1024 mb-1">
-                    Mailchim
+                    SaveEat
                   </h5>
                   <p class="mb-0 semi-bold font__size--12 text__12-md color__gray-1">
-                    UI Designer - 4 Years Experince
+                    Business Strategy - 3 Months Experience
                   </p>
                 </div>
               </div>
             </div>
+            
           </div>
         </div>
       </div>
     </section>
-
+<!--Work Experience Ends-->
 
     <section class="bg__gray-2 position-relative">
       <img src="./assets/images/Group 18887.png" class="path__5" alt="" />
