--- a/index.html
+++ b/index.html
@@ -506,13 +506,7 @@
 -->
 
 <section class="resume pt-9 pt-xxl-14 pb-xxl-10 pb-lg-8 pt-md-9 pb-6">
-  <div class="resume-shape-wrapper position-absolute w-100 h-100">
-    <div class="shape-1"></div>
-    <div class="shape-2"></div>
-    <div class="shape-3"></div>
-    <div class="shape-4"></div>
-    <div class="shape-5"></div>
-  </div>
+  
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -528,138 +522,77 @@
           </div>
           <div class="card-body">
             <!-- ==== Start experiencEducation =====-->
-            <div class="experiencEducation">
-              <!-- Start experience -->
+            <div class="experience-section">
               <div>
                 <div class="title-size">
                   <p class="resume-title">Education</p>
                 </div>
-                <div class="resume-section">
-                <div class="content">
-                  <p class="content-title">Portsmouth University</p>
+                <div class="resume-section row justify-content-start">
+                <div class="content col-6">
+                  <p class="content-title">BSC Computer Animation</p>
                   <p>
-                    BSC • Computer Animation <br />
+                    Portsmouth University<br />
                     2004 - 2007
                   </p>
                 </div>
-                  <div class="content">
-                  <p class="content-title">Cranfield University</p>
+                  <div class="content col-6">
+                  <p class="content-title">MSc Management & Entrepreneurship</p>
                   <p>
-                    MSc • Management & Entrepreneurship<br />
+                    Cranfield University<br />
                     2016 – 2017
                   </p>
                 </div>
-              
-              </div>
-                <div class="content">
-                  <h4>Exclusive Addons</h4>
-                  <p>
-                    Designer Officer <br />
-                    December 2019 - Current
-                  </p>
-                </div>
-              </div>
-              <!-- Start education -->
-              <div class="education">
-                <div class="title">
-                  <h5>Education</h5>
-                </div>
-                <div class="content">
-                  <h4>Graphic Arts Institute</h4>
-                  <p>
-                    MS • Information Design & Technology <br />
-                    2016 – 2017
-                  </p>
-                </div>
-                <div class="content">
-                  <h4>Florida Gulf Coast University</h4>
-                  <p>
-                    BA • Psychology <br />
-                    2014 – 2015
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!-- ==== End experiencEducation =====-->
-            <!-- ==== Start freelance =====-->
-            <div class="freelance">
-              <div class="title">
-                <h5>Freelance Clients</h5>
-              </div>
-              <div class="freelance-wrapper">
-                <div class="item">
-                  <img src="images/resume/client-logo-5.svg" alt="" />
-                </div>
-                <div class="item">
-                  <img src="images/resume/client-logo-2.svg" alt="" />
-                </div>
-                <div class="item">
-                  <img src="images/resume/client-logo-3.svg" alt="" />
-                </div>
-                <div class="item">
-                  <img src="images/resume/client-logo-4.svg" alt="" />
-                </div>
-                <div class="item">
-                  <img src="images/resume/client-logo-6.svg" alt="" />
-                </div>
-                <div class="item">
-                  <img src="images/resume/client-logo-8.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <!-- ==== End freelance =====-->
-            <!-- ==== Start skillsTools =====-->
-            <div class="skillsTools pt-2">
-              <!-- Start skills -->
-              <div class="skills">
-                <div class="title">
-                  <h5>Skills</h5>
-                </div>
-                <div
-                  class="
-                    d-flex
-                    justify-content-center justify-content-lg-start
-                    mb-4 mb-xl-0
-                  "
-                >
-                  <div class="content me-xxl-8 me-0">
-                    <ul class="list-unstyled">
-                      <li>HTML, CSS</li>
-                      <li>Front-end Development</li>
-                      <li>Back-End Development</li>
-                      <li>Java Script, PHP</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <!-- Start tools -->
-              <div class="tools">
-                <div class="title">
-                  <h5>Tools I use every day</h5>
-                </div>
-                <div class="tools-wrapper">
-                  <div class="item">
-                    <img src="images/resume/client-logo-21.svg" alt="" />
-                  </div>
-                  <div class="item">
-                    <img src="images/resume/client-logo-22.svg" alt="" />
-                  </div>
-                  <div class="item">
-                    <img src="images/resume/client-logo-23.svg" alt="" />
-                  </div>
-                  <div class="item">
-                    <img src="images/resume/client-logo-24.svg" alt="" />
-                  </div>
-                  <div class="item">
-                    <img src="images/resume/client-logo-25.svg" alt="" />
-                  </div>
-                  <div class="item">
-                    <img src="images/resume/client-logo-26.svg" alt="" />
-                  </div>
-                </div>
-              </div>
+              </div>       
             </div>
           </div>
+          <!--Certification-->
+          <div class="experience-section">
+            <div>
+              <div class="title-size">
+                <p class="resume-title">Certification</p>
+              </div>
+              <div class="resume-section row justify-content-start">
+              <div class="content col-6">
+                <p class="content-title">Digital Product management Certificate</p>
+                <p>
+                  Kings College London<br />
+                  2004
+                </p>
+              </div>
+                <div class="content col-6">
+                <p class="content-title">Cranfield University</p>
+                <p>
+                  MSc • Management & Entrepreneurship<br />
+                  2016 – 2017
+                </p>
+              </div>
+            </div> 
+            <div class="resume-section row justify-content-start">
+              <div class="content col-6">
+                <p class="content-title">Portsmouth University</p>
+                <p>
+                  BSC • Computer Animation <br />
+                  2004 - 2007
+                </p>
+              </div>
+                <div class="content col-6">
+                <p class="content-title">Cranfield University</p>
+                <p>
+                  MSc • Management & Entrepreneurship<br />
+                  2016 – 2017
+                </p>
+              </div>
+            </div>
+            <div class="content col-7 p-0">
+              <p class="content-title">Portsmouth University</p>
+              <p>
+                BSC • Computer Animation <br />
+                2004 - 2007
+              </p>
+            </div>
+                   
+          </div>
+        </div>
         </div>
       </div>
     </div>
