--- a/index.html
+++ b/index.html
@@ -521,21 +521,21 @@
             </div>
           </div>
           <div class="card-body">
-            <!-- ==== Start experiencEducation =====-->
+            <!-- ==== Start Education =====-->
             <div class="experience-section">
               <div>
                 <div class="title-size">
                   <p class="resume-title">Education</p>
                 </div>
                 <div class="resume-section row justify-content-start">
-                <div class="content col-6">
+                <div class="content col-12 col-md-6">
                   <p class="content-title">BSC Computer Animation</p>
                   <p>
                     Portsmouth University<br />
                     2004 - 2007
                   </p>
                 </div>
-                  <div class="content col-6">
+                  <div class="content col-12 col-md-6">
                   <p class="content-title">MSc Management & Entrepreneurship</p>
                   <p>
                     Cranfield University<br />
@@ -551,45 +551,45 @@
               <div class="title-size">
                 <p class="resume-title">Certification</p>
               </div>
-              <div class="resume-section row justify-content-start">
-              <div class="content col-6">
+
+            <div class="resume-section row justify-content-start">
+              <div class="content col-12 col-md-6">
                 <p class="content-title">Digital Product management Certificate</p>
                 <p>
                   Kings College London<br />
                   2004
                 </p>
               </div>
-                <div class="content col-6">
+                <div class="content col-12 col-md-6">
                 <p class="content-title">Cranfield University</p>
                 <p>
                   MSc • Management & Entrepreneurship<br />
                   2016 – 2017
                 </p>
               </div>
-            </div> 
-            <div class="resume-section row justify-content-start">
-              <div class="content col-6">
+              <div class="content col-12 col-md-6">
                 <p class="content-title">Portsmouth University</p>
                 <p>
                   BSC • Computer Animation <br />
                   2004 - 2007
                 </p>
               </div>
-                <div class="content col-6">
+                <div class="content col-12 col-md-6">
                 <p class="content-title">Cranfield University</p>
                 <p>
                   MSc • Management & Entrepreneurship<br />
                   2016 – 2017
                 </p>
               </div>
-            </div>
-            <div class="content col-7 p-0">
+            
+            <div class="content col-12 col-md-6">
               <p class="content-title">Portsmouth University</p>
               <p>
                 BSC • Computer Animation <br />
                 2004 - 2007
               </p>
             </div>
+          </div>
                    
           </div>
         </div>
