Adds project section

--- a/index.html
+++ b/index.html
@@ -34,18 +34,7 @@
 
           <div class="collapse navbar-collapse wrapper__navbar-menu center" id="navbarSupportedContent">
             <ul class="navbar-nav menu__center">
-              <li class="nav-item dropdown">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle"
-                  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                  aria-expanded="false">
-                  Themes
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="index.html">Designer</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
-                    href="./../theme 2/index.html">Developer</a>
-                </div>
-              </li>
+              
               <li class="nav-item">
                 <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 active"
                   href="index.html">
@@ -53,13 +42,13 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="about.html">
+                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="#about">
                   about me
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="project.html">
-                  project
+                  projects
                 </a>
               </li>
               <li class="nav-item d-lg-none">
@@ -253,13 +242,13 @@
           </h2>
         </div>
 
-
+        <!--AnfaniFi-->
         <div class="row align-items-stretch">
-          <div class="col-xl-6">
+          <div class="col-xl-6 d-flex">
             <div class="wrapper__project vibrant_blue mb-5" data-aos="fade-right" data-aos-duration="1000"
               data-aos-delay="200">
               <div class="row">
-                <div class="col-12 col-md-6 col-xl-5 mb-5 my-md-auto px-0">
+                <div class="col-12 col-md-6 col-xl-5 mb-5 my-md-auto">
                   <h4 class="bold font__size--40 text__40-1024 text__40-mm color__white mb-1">
                     AnfaniFI
                   </h4>
@@ -294,11 +283,13 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-6">
+
+          <!--AU Post-->
+          <div class="col-xl-6 d-flex">
             <div class="wrapper__project deep_red mb-5" data-aos="fade-left" data-aos-duration="1000"
               data-aos-delay="200">
               <div class="row">
-                <div class="col-12 col-md-6 col-xl-6 mb-5 my-md-auto px-0">
+                <div class="col-12 col-md-6 col-xl-6 mb-5 my-md-auto">
                   <h4 class="bold font__size--40 text__40-1024 text__40-mm color__white mb-1">
                     Australia Post
                   </h4>
@@ -339,7 +330,7 @@
     <!--Featured ends-->
 
     <!--About Section-->
-    <section class="bg__black top-conunt">
+    <section class="bg__black top-conunt" id="about">
       <div class="container">
 
         <div class="container ">
@@ -664,7 +655,7 @@
 
 
     <!--Contact me-->
-    <section class="pb-0">
+    <section class="p-0">
       <div class="container">
         <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
           data-aos-delay="200">
