adds project details

--- a/anfanifi.html
+++ b/anfanifi.html
@@ -53,56 +53,180 @@
               </li>
             </ul>
           </div>
-
-
         </div>
       </nav>
-
+      <!--Project details-->
       <section class="position-relative pt-4 pb-3">
         <div class="container position-relative z-2">
-          <div class="row text-center text-lg-left">
-            <div class="col-lg-6 mb-5 mb-lg-l0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
-              <p class="bold text-uppercase font__size--16 text__16-1024 color__blue ls__3 mt-5 mb-0">
-                Hi, I'm Olu
-              </p>
+          <div class="row text-center text-md-left col-12 col-lg-9">
+            <div class="mb-5 mb-lg-l0" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
               <h1 class="font__size--65 text__60-1024 text__60-sm text__60-xxs bold my-3">
-                An Experienced <br class="d-md-block d-lg-none" />
-                <span class="position-relative">product manager
+                Restaurant Management
+                <span class="position-relative">SaaS Platform
                   <img src="./assets/images/Rectangle 5.png" class="path__1" alt="" />
                 </span>
-                <br class="d-md-block" />
-                based in the UK
               </h1>
-              <p class="medium font__size--16 text__16-1024 color__gray-1 mb-4">
-                I'm a versatile Product Manager with a passion for innovation. I leverage my experience across B2B,
-                consumer electronics, and early stage SaaS startups to develop impact product strategies that drive
-                success in diverse industries.
-              </p>
-              <div class="d-lg-flex justify-content-center justify-content-lg-start align-items-center">
-                <a href="https://www.linkedin.com/in/oluakani/" target="blank"
-                  class="bold mb-4 mb-lg-0 flex-shrink-0 font__size--14 text__14-1024 btn btn__blue color__white shadow rounded-50">Contact
-                  Me on LinkedIn</a>
+            </div>
 
-                <div
-                  class="wrapper__sosmed flex-shrink-0 d-flex justify-content-center justify-content-lg-start mx-2 mx-xl-3 align-items-center">
-                  <a href="https://www.linkedin.com/in/oluakani/" target="blank">
-                    <img src="./assets/images/linkedin.svg" alt="" />
-                  </a>
-                  <a href="https://github.com/Oakani1" target="blank">
-                    <img src="./assets/images/github.svg" alt="" />
-                  </a>
+            <div class="resume-section row justify-content-start m-0">
+              <div class="content col-12 col-md-6 col-lg-4">
+                <p class="project-detail-heading ">Client</p>
+                <p class="project-detail">
+                  AnfaniFi
+                </p>
+              </div>
+              <div class="content col-md-6">
+                <p class="project-detail-heading ">Tasks</p>
+                <p class="project-detail">
+                  Research, idealization, UX Design, Product Management, Project Management, Customer Onboarding
+                </p>
+              </div>
+              <div class="content col-12 col-md-6 col-lg-4">
+                <p class="project-detail-heading ">Time</p>
+                <p class="project-detail">
+                  Sep 2023 - Mar 2024
+                </p>
+              </div>
+              <div class="content col-12 col-md-6">
+                <p class="project-detail-heading ">Role</p>
+                <p class="project-detail">
+                  Product Management & Business Strategy
+                </p>
+              </div>
+              <div class="content col-12 col-md-6 col-lg-4 align-items-center">
+                <p class="project-detail-heading ">Tools</p>
+                <!--Tools-->
+                <div class="row d-flex align-items-center">
+
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/jira.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/confluence.svg" alt="" class=" ">
+                  </div>
+                  <!--<div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/notion.svg" alt="" class=" ">
+                  </div>-->
+                  <!--<div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/project.svg" alt="" class=" ">
+                  </div>-->
+                  <!--<div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/visio.svg" alt="" class=" ">
+                  </div>-->
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/excel.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/power_point.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/figma.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/photoshop.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/illustrator.svg" alt="" class=" ">
+                  </div>
+                  <!--<div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/3dmax.svg" alt="" class=" ">
+                  </div>-->
                 </div>
-                <img src="./assets/images/Line 1.png" class="d-none d-lg-block" alt="" />
+              </div>
+              <div class="content col-12 col-md-6">
+                <p class="project-detail-heading ">Links</p>
+                <p class="project-detail">
+                  Website
+                </p>
               </div>
             </div>
-            <div class="col-lg-6">
-              <img src="./assets/images/Portfolio_picture_v2.png" data-aos="fade-up" data-aos-duration="1000"
-                data-aos-delay="600" alt="" />
-            </div>
+
+
+
+
+
           </div>
         </div>
       </section>
     </div>
+
+    <!--<div class="experience-section">
+              <div>
+                
+
+                <div class="resume-section row justify-content-start">
+                  <div class="content col-12 col-md-6">
+                    <p class="content-title">Digital Product management Certificate</p>
+                    <p>
+                      Kings College London<br />
+                      2024
+                    </p>
+                  </div>
+                  <div class="content col-12 col-md-6">
+                    <p class="content-title">Full Stack development Diploma</p>
+                    <p>
+                      Code Institute<br />
+                      2024
+                    </p>
+                  </div>
+                  <div class="content col-12 col-md-6">
+                    <p class="content-title">PRINCE2 Practitioner</p>
+                    <p>
+                      Axelos <br />
+                      2017
+                    </p>
+                  </div>
+                  <div class="content col-12 col-md-6">
+                    <p class="content-title">PSM I (In progress)</p>
+                    <p>
+                      Scrum.org<br />
+                      In Progress
+                    </p>
+                  </div>
+                  <div class="content col-12 col-md-6">
+                    <p class="content-title">BCS Business Analysis Practice</p>
+                    <p>
+                      BCS <br />
+                      2017
+                    </p>
+                  </div>
+                </div>
+                <div class="row  col-md-6 d-flex align-items-start">
+                        
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/jira.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/confluence.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/notion.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/project.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/visio.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/power_point.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/figma.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/photoshop.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/illustrator.svg" alt="" class=" ">
+                  </div>
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                    <img src="./assets/images/3dmax.svg" alt="" class=" ">
+                  </div>
+                </div>
+                </div>
+              </div>-->
+
 
     <!--Logos-->
     <section class="pb-0">
@@ -159,8 +283,6 @@
               <p class="coming-soon">Coming Soon</p>
             </div>
           </div>
-
-
           <div class="col-sm-6 col-lg-3 mb-4 mb-sm-0">
             <div class="wrapper__card-service mt-sm-5" data-aos="flip-left" data-aos-duration="1000"
               data-aos-delay="600">
@@ -171,13 +293,12 @@
                     fill="white" />
                 </svg>
               </div>
+
               <h4 class="bold font__size--24 text__24-1024">Digital Product Management</h4>
               <p class="medium font__size--12 text__12-md color__gray-1">
                 Ideation, Strategy Development, and Delivery at Early-Stage Startups. Leveraging Agile Principles
               </p>
-              <a href="project.html#digital-projects" class="no-color-change">
-                <p class="coming-soon">Find out more</p>
-              </a>
+              <p class="coming-soon">Coming Soon</p>
             </div>
           </div>
           <div class="col-sm-6 col-lg-3 mb-4 mb-sm-0">
@@ -272,8 +393,8 @@
                       Marketing
                     </div>
                   </div>
-                  <a href="anfanifi.html"
-                    class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Find Out more
+                  <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 color__white">Coming
+                    Soon
                     <img src="./assets/images/Arrow 7.png" class="ml-3" alt="" />
                   </a>
                 </div>
