--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                   class="bold mb-4 mb-lg-0 flex-shrink-0 font__size--14 text__14-1024 btn btn__blue color__white shadow rounded-50">Contact
                   Me on LinkedIn</a>
 
-                <div
-                  class="wrapper__sosmed flex-shrink-0 d-flex justify-content-center justify-content-lg-start mx-2 mx-xl-3 align-items-center">
+                <div class="wrapper__sosmed flex-shrink-0 d-flex justify-content-center justify-content-lg-start mx-2 mx-xl-3 align-items-center">
                   <a href="https://www.linkedin.com/in/oluakani/" target="blank">
                     <img src="./assets/images/linkedin.svg" alt="" />
                   </a>
