--- a/anfanifi.html
+++ b/anfanifi.html
@@ -159,15 +159,13 @@
 
     
 
-    <!--Skills-->
+    <!--Overview-->
     <section>
       <div class="container ">
         <div class="text-center">
           <h2 class="bold font__size--40 text__40-1024 text__40-mm mb-5" data-aos="fade-up" data-aos-duration="1000"
             data-aos-delay="200">
-            My
-            <span class="position-relative path__3"><span class="position-relative z-2">Expertise</span></span>
-            & Portfolio
+            <span class="position-relative path__3"><span class="position-relative z-2">Overview</span></span>
           </h2>
         </div>
         <div class="row">
