add au post half way

--- a/anfanifi.html
+++ b/anfanifi.html
@@ -247,6 +247,7 @@
                 <li>Scalability Concerns</li>
                 <li>No payment gateway in Sierra Leone</li>
                 <li>Lack of Direct User Feedback</li>
+                <li>Business operation in Sierra Leone were very manual as businesses lacked digital tools</li>
               </ol>
             </div>
           </div>
@@ -263,6 +264,7 @@
                 <li>worked with Dev team to micgrate tech stack for enhanced performance and scalability.</li>
                 <li>Developed an innovative mobile money payment solution.</li>
                 <li>Established feedback mechanisms and conducted user research for continuous improvement.</li>
+                <li>Digitised business operations leading to improved efficieny</li>
               </ol>
             </div>
           </div>
