--- a/aupost.html
+++ b/aupost.html
@@ -62,8 +62,8 @@
             <div class="col-12 col-lg-9 mb-5 mb-lg-l0 ">
               <h1 class="font__size--65 text__60-1024 text__60-sm text__60-xxs bold my-3" data-aos="fade-right"
                 data-aos-duration="1000" data-aos-delay="200">
-                Restaurant Management
-                <span class="position-relative">SaaS Platform
+                Plus8
+                <span class="position-relative">Touch 5 4G
                   <img src="./assets/images/Rectangle 5.png" class="path__1" alt="" />
                 </span>
               </h1>
@@ -73,26 +73,25 @@
               <div class="content col-12 col-md-6 col-lg-4">
                 <p class="project-detail-heading ">Client</p>
                 <p class="project-detail">
-                  AnfaniFi
+                  Australia Post
                 </p>
               </div>
               <div class="content col-md-6 col-lg-5">
                 <p class="project-detail-heading ">Tasks</p>
                 <p class="project-detail">
-                  Research, Ideation, UX Design, Requirements, Product Management, Project Management, Customer
-                  Onboarding
+                  Product Management, Project Management, packaging design Collateral creation
                 </p>
               </div>
               <div class="content col-12 col-md-6 col-lg-4">
                 <p class="project-detail-heading ">Time</p>
                 <p class="project-detail">
-                  Sep 2023 - Mar 2024
+                  Mar 2017 - Dec 2017
                 </p>
               </div>
               <div class="content col-12 col-md-6 col-lg-5">
                 <p class="project-detail-heading ">Role</p>
                 <p class="project-detail">
-                  Product Management & Business Strategy
+                  Ingram Micro ODM Product Manager
                 </p>
               </div>
               <div class="content col-12 col-md-6 col-lg-4 align-items-center">
@@ -100,45 +99,46 @@
                 <!--Tools-->
                 <div
                   class="row d-md-flex align-items-md-center justify-content-md-start justify-content-center flex-wrap ">
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/jira.svg" alt="" class=" ">
                   </div>
                   <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/confluence.svg" alt="" class=" ">
-                  </div>
+                  </div>-->
                   <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/notion.svg" alt="" class=" ">
                   </div>-->
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/project.svg" alt="" class=" ">
-                  </div>-->
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  </div>
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/visio.svg" alt="" class=" ">
-                  </div>-->
+                  </div>
                   <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/excel.svg" alt="" class=" ">
                   </div>
                   <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/power_point.svg" alt="" class=" ">
                   </div>
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/figma.svg" alt="" class=" ">
-                  </div>
+                  </div>-->
                   <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/photoshop.svg" alt="" class=" ">
                   </div>
                   <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/illustrator.svg" alt="" class=" ">
                   </div>
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
                     <img src="./assets/images/3dmax.svg" alt="" class=" ">
-                  </div>-->
+                  </div>
                 </div>
               </div>
               <div class="content col-12 col-md-6 col-lg-5">
                 <p class="project-detail-heading ">Link/s</p>
                 <p class="project-detail">
-                  <a href="https://anfanifinancial.com/" target="_blank" class="no-color-change">anfanifinancial.com</a>
+                  <a href="https://www.amazon.com.au/V7-Plus8-Touch5-Wireless-Locked/dp/B07BZRKVL7" target="_blank"
+                    class="no-color-change">Amazon</a>
                 </p>
               </div>
               <div class="col-md-6 col-lg-4 mb-5">
@@ -171,37 +171,32 @@
             <span class="position-relative path__3"><span class="position-relative z-2">Overview</span></span>
           </h2>
         </div>
-        <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0" data-aos="fade-up"
-          data-aos-duration="1000" data-aos-delay="200">
-          The Customer
-        </h3>
+
         <div class="row">
           <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+            <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0" >
+              The Customer
+            </h3>
             <p>
-              AnfaniFI is a platform that connects businesses and individuals across the African supply chain. It
-              empowers businesses to link opportunities with finance. By assessing operational, financial, and
-              behavioral data, AnfaniFI creates a network of trusted partners.
-            </p>
-            <p>AnfaniFI launched Anfani360 in Sierra Leone. Anfani360 is a restaurant solution designed to empower
-              Africa's food service businesses. It offers a variety of features to help restaurants grow their business,
-              including online ordering, a 360 view of operations management, and driver management.
+              Australia Post, the government-owned postal service, also offers various retail services, including
+              technology products like mobile phones. It also provides vital eCommerce and digital solutions
             </p>
             </p>
           </div>
           <div class="col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani360_logo.svg" alt="" />
+            <img src="./assets/images/au_post_logo.svg" alt="" />
           </div>
         </div>
       </div>
     </section>
 
     <!--Project Goals-->
-    <section class="bg_vibrant_blue" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
+    <section class="bg_deep_red" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6 p-5 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/laptop.svg" alt="" />
+          <div class="col-lg-6 p-5 d-none d-lg-block">
+            <img src="./assets/images/plus8.svg" alt="" />
           </div>
           <div class="col-lg-6">
             <div>
@@ -209,17 +204,12 @@
                 Project Goals
               </h3>
               <p class="color__white">
-                AnfaniFi's flagship product, Anfani360, was initially built on PHP. Recognizing the need for
-                modernization,
-                the project aimed to transition the codebase to a more current framework, enhancing performance,
-                scalability, and maintainability. The goal was to soft launch in Sierra Leone, focusing on acquiring
-                early
-                users, gathering their invaluable feedback, and creating a data-driven roadmap for future development.
-
+                Our project aimed to expand the product offerings on our website by introducing an affordable 4G mobile
+                phone, catering to the growing demand for budget-friendly smartphones.
               </p>
             </div>
             <div class="col-md-7 col-lg-6 p-5 d-lg-none">
-              <img src="./assets/images/laptop.svg" alt="" />
+              <img src="./assets/images/plus8.svg" alt="" />
             </div>
           </div>
 
@@ -241,12 +231,11 @@
             <div class="p-0" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
 
               <ol>
-                <li>Limited Flexibility due to Pre-built Solution</li>
-                <li>Monolithic Architecture Hindered Development</li>
-                <li>Outdated Technology Stack</li>
-                <li>Scalability Concerns</li>
-                <li>No payment gateway in Sierra Leone</li>
-                <li>Lack of Direct User Feedback</li>
+                <li>The smartphone market was already saturated.</li>
+                <li>Customers were increasingly seeking affordable smartphone options.</li>
+                <li>Australia Post lacked an in-house development team.</li>
+                <li>Addressing warranty issues was a key consideration to ensure customer satisfaction and protect
+                  Australia Post's reputation.</li>
               </ol>
             </div>
           </div>
@@ -259,10 +248,11 @@
             <div class="p-0" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
 
               <ol>
-                <li>Collaborated to define clear project requirements.</li>
-                <li>worked with Dev team to micgrate tech stack for enhanced performance and scalability.</li>
-                <li>Developed an innovative mobile money payment solution.</li>
-                <li>Established feedback mechanisms and conducted user research for continuous improvement.</li>
+                <li>Conducted extensive market research to identify gaps and opportunities.</li>
+                <li>Developed comprehensive branding, including logo design.</li>
+                <li>Designed eye-catching packaging and supporting collateral such as the user manual.</li>
+                <li>Streamlined the phone's design and features, focusing on affordability.</li>
+                <li>Ensured a readily available supply of spare parts and replacements.</li>
               </ol>
             </div>
           </div>
@@ -286,80 +276,67 @@
               Research
             </h3>
             <p>
-              During my time in Sierra Leone, I conducted immersive, on-the-ground research with key stakeholders across
-              the food delivery ecosystem — from consumers and restaurants to delivery companies. Through interviews,
-              observations, and analysis, I uncovered pain points and opportunities for digitization, which informed the
-              development of AnfaniFi's solutions tailored to the unique African context.
+              I employed a customer matrix, leveraging GFK data, to identify gaps in the market. By analyzing the
+              relationship between phone prices and sales volume, we strategically pinpointed opportunities to introduce
+              new models that offered either superior value, a more competitive price, or both, while avoiding
+              oversaturated market segments. This data-driven approach allowed us to position new products effectively
+              and maximize their potential for success.
             </p>
             </p>
           </div>
           <div class="col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani_research.png" alt="" />
+            <img src="./assets/images/au-post-graph.png" alt="" />
           </div>
         </div>
       </div>
     </section>
-    <!--The ideation-->
+    <!--Proposal-->
     <section class="section-sm-ptb">
       <div class="container ">
         <div class="row">
           <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani_process.png" alt="" class="shadow-lg rounded-10" />
+            <img src="./assets/images/au-post-proposal.png" alt="" class="shadow-lg rounded-10" />
           </div>
           <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
             <h3 class="project-section-headings text-center text-md-left col-lg-6 p-0">
-              Ideation
+              Proposal
             </h3>
             <p>
-              I mapped out existing workflows, analyzed pain points, and brainstormed potential improvements alongside
-              key stakeholders. Through collaborative workshops, we refined processes and envisioned a future state
-              where AnfaniFi played a central role in optimizing operations. Crucially, I ensured that all proposed
-              solutions were tightly aligned with our North Star metric, guaranteeing strategic focus and impact
+              Market research informed the creation of a proposal outlining two potential phone models. After careful
+              consideration, the decision was made to proceed with the Plus 8 Touch 5.
             </p>
-
           </div>
           <div class="col-lg-6 d-md-flex d-lg-none align-items-center justify-content-center" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="600">
-            <img src="./assets/images/anfani_process.png" alt="" class="shadow-lg rounded-10">
+            <img src="./assets/images/au-post-proposal.png" alt="" class="shadow-lg rounded-10">
           </div>
-
-        </div>
-        <div class="d-md-flex align-items-center justify-content-center mt-5" data-aos="fade-up"
-          data-aos-duration="1000" data-aos-delay="600">
-          <img src="./assets/images/anfani_OST.png" alt="" class="shadow-lg rounded-10">
         </div>
       </div>
     </section>
 
     <!--Requirements-->
-    <section class="bg_vibrant_blue section-sm-ptb" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
+    <section class="bg_deep_red section-sm-ptb" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
       <div class="container">
         <div class="row align-items-center mb-5">
           <div class="col-lg-6">
             <div>
               <h3 class="project-section-headings text-center text-md-left p-0 color__white">
-                Requirements Gathering & Prioritization
+                Product and Project Managment
               </h3>
               <p class="color__white">
-                I spearheaded the requirements gathering process, prioritizing features based on user needs and business
-                goals. I then developed a high-level product roadmap, outlining key milestones and release timelines.
-                Utilizing user story mapping, I collaborated with the development team to break down requirements into
-                epics and user stories, ensuring a clear understanding of scope for each sprint. We aimed for a two-week
-                sprint cadence to maintain agility and responsiveness to feedback.
+                Despite a small team, I effectively managed the project, collaborating seamlessly with compliance,
+                quality control, technical teams and manufacturers . I maintained meticulous organization, ensured milestones were met,
+                and spearheaded compliance and certification efforts. Additionally, I played a hands-on role in
+                designing the packaging, marketing collateral, and even the phone's boot-up screens.
               </p>
             </div>
           </div>
           <div class="col-md-7 col-lg-6">
-            <img src="./assets/images/laptop.svg" alt="" />
+            <img src="./assets/images/project_img.png" alt="" class="shadow-lg rounded-10" />
           </div>
         </div>
-        <div>
-          <img src="./assets/images/user_story.png" alt="" class="shadow-lg rounded-10" />
-        </div>
-        <div class="mt-5">
-          <img src="./assets/images/user_story_hl.png" alt="" class="shadow-lg rounded-10" />
-        </div>
+
     </section>
 
 
